# netspy

./: .gitmodules  CMakeLists.txt  Makefile  PACKAGING.md  README.md  build-deb.sh  generate_bindings.py  netspy  netspy.1  netspy.cpp  netspy.cpp.in  network_functions.json  network_interceptor.hpp  verify_pcap.py
.github/workflows/: build-packages.yml
debian/: changelog  control  copyright  rules
demo/: README.md  demo_curl.pcap  generate_demo.sh  go.mod  go.sum  netspy_demo.cast  netspy_demo.go
examples/: pcap_stream_client.py  traffic_filter.py  wireshark_example.sh
tests/: pcap_over_ip_test.cpp  regex_filter_test.cpp  verify_pcap.py
